<?xml version="1.0" encoding="utf-8"?>
<!--

    Copyright (C) 2012 SINTEF <fabien@fleurey.com>

    Licensed under the GNU LESSER GENERAL PUBLIC LICENSE, Version 3, 29 June 2007;
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

        http://www.gnu.org/licenses/lgpl-3.0.txt

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.

-->
<resources>
    
    <string name="app_name">ChestBelt</string>
    <string name="list_header_text">Known devices</string>
	<string name="list_footer_text">Detect available devices</string>
	<string name="details_icon_description">Details activity icon descriptor</string>
	
	<string name="pref_data_storage">storage_status</string>
	<string name="pref_ecg_storage">storage_ecg_status</string>
	<string name="pref_imu_storage">storage_imu_status</string>
	<string name="pref_sensor_prefix">pref_sensor_prefix</string>
	<string name="pref_apply_changes">pref_apply_changes_button</string>
	<string name="pref_datamode_key">datamode_list_preference</string>
	<string name="pref_autoreconnect_duration_key">pref_autoreconnect_duration_key</string>
	<string name="pref_autoreconnect_key">pref_autoreconnect_key</string>
	<string name="list_status_image_description">list_status_image_description</string>
	<string name="list_available_image_description">list_available_image_description</string>
	<string name="tv_accelerometers_title">Accelerometers</string>
	<string name="tv_gyroscopes_title">Gyroscopes</string>
	
</resources>