<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
            android:title="Service status">

        <CheckBoxPreference
                android:key="@string/pref_data_storage"
                android:title="Active" 
                android:defaultValue="false"/>
        
         </PreferenceCategory>
        
        <PreferenceCategory
            android:title="Storage options">
        
        <CheckBoxPreference
                android:key="@string/pref_ecg_storage"
                android:title="Store ECG" 
                android:defaultValue="false"/>
        
        <CheckBoxPreference
                android:key="@string/pref_imu_storage"
                android:title="Store IMU" 
                android:defaultValue="false"/>
         
    </PreferenceCategory>

</PreferenceScreen>