<?xml version="1.0" encoding="utf-8"?>
<!--

    Copyright (C) 2012 SINTEF <fabien@fleurey.com>

    Licensed under the GNU LESSER GENERAL PUBLIC LICENSE, Version 3, 29 June 2007;
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

        http://www.gnu.org/licenses/lgpl-3.0.txt

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.

-->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

     <RelativeLayout
        android:id="@+id/system_info_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
           
          <TextView
        android:id="@+id/tv_battery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:gravity="center_horizontal"
        android:textAppearance="?android:attr/textAppearanceLarge" 
        android:freezesText="true"/>
          
           <TextView
        android:id="@+id/tv_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:gravity="center_horizontal"
        android:textSize="15sp"
        android:textColor="@android:color/secondary_text_dark"/>
         </RelativeLayout>
     
     <RelativeLayout
        android:id="@+id/hr_ecg_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
    
    <TextView
        android:id="@+id/tv_heartrate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_alignTop="@+id/gv_ecg"
        android:textColor="#B22222"
        android:textStyle="bold"
        android:textSize="30sp" />

    <org.thingml.chestbelt.android.chestbeltdroid.graph.GraphDetailsView 
       	android:id="@+id/gv_ecg"  
        android:layout_width="match_parent" 
        android:layout_height="150dp" 
        android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
        android:layout_toRightOf="@id/tv_heartrate"/>
    
    <TextView
        android:id="@+id/tv_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/gv_ecg"
        android:layout_alignLeft="@id/tv_heartrate"
        android:textColor="#87CEFA"
        android:layout_marginBottom="10dp"
        android:textSize="20sp" />
    
    </RelativeLayout>
    
      <LinearLayout 
         android:id="@+id/activity_position_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
          android:background="@android:color/background_light"
          android:layout_marginLeft="20dp"
          android:layout_marginRight="20dp">
          
    <ImageView
        android:id="@+id/iv_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:contentDescription="@string/details_icon_description"/>

    <ImageView
        android:id="@+id/iv_position"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
      android:layout_weight="1"
      android:layout_gravity="center"
        android:layout_marginRight="20dp"
        android:contentDescription="@string/details_icon_description"/>
    
    </LinearLayout>
     
      <LinearLayout 
           android:id="@+id/gyro_acc_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">
    
    <RelativeLayout
        android:id="@+id/gyro_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <TextView 
            android:id="@+id/tv_gyro_title"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/tv_gyroscopes_title"
            android:layout_centerHorizontal="true"/>
        
        <ProgressBar
            android:id="@+id/pb_gyro_pitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="5dp"
            android:paddingBottom="5dp"
             android:layout_below="@id/tv_gyro_title"
             android:progressDrawable="@android:drawable/progress_horizontal"
             style="?android:attr/progressBarStyleHorizontal" 
             android:max="5000"/>
        
        <ProgressBar
        	android:id="@+id/pb_gyro_roll"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="5dp"
            android:paddingBottom="5dp"
        	 android:progressDrawable="@android:drawable/progress_horizontal"
        	 android:layout_below="@id/pb_gyro_pitch"
             style="?android:attr/progressBarStyleHorizontal"
             android:max="5000"/>
        
        <ProgressBar
        	android:id="@+id/pb_gyro_yaw"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="5dp"
            android:paddingBottom="10dp"
        	 android:progressDrawable="@android:drawable/progress_horizontal"
        	 android:layout_below="@id/pb_gyro_roll"
              style="?android:attr/progressBarStyleHorizontal"
             android:max="5000"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/acc_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <TextView 
            android:id="@+id/tv_acc_title"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/tv_accelerometers_title"
            android:layout_centerHorizontal="true"/>
        
        <ProgressBar
            android:id="@+id/pb_acc_lateral"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             android:paddingTop="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="10dp"
            android:paddingBottom="5dp"
             android:layout_below="@id/tv_acc_title"
            android:progressDrawable="@android:drawable/progress_horizontal"
             style="?android:attr/progressBarStyleHorizontal"
             android:max="1000"/>

        <ProgressBar
            android:id="@+id/pb_acc_longitudinal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:paddingLeft="5dp"
            android:paddingRight="10dp"
            android:paddingBottom="5dp"
             android:progressDrawable="@android:drawable/progress_horizontal"
              android:layout_below="@id/pb_acc_lateral"
            style="?android:attr/progressBarStyleHorizontal"
             android:max="1000"/>

        <ProgressBar
            android:id="@+id/pb_acc_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
             android:progressDrawable="@android:drawable/progress_horizontal"
              android:layout_below="@id/pb_acc_longitudinal"
              style="?android:attr/progressBarStyleHorizontal"
             android:max="1000"/>
    </RelativeLayout>
</LinearLayout>
</LinearLayout>